apps/media/qbittorrent/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: qbittorrent
  namespace: media
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.middlewares: wireguard-vpn-only@kubernetescrd 
spec:
  ingressClassName: traefik
  rules:
    - host: qbittorrent.sakul-flee.de
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: qbittorrent
                port:
                  number: 8080
  tls:
    - hosts:
        - qbittorrent.sakul-flee.de 
      secretName: qbittorrent-sakul-flee-de-tls
